# OpenTask

./: .gitignore  AGENTS.ZH.md  AGENTS.md  QUICKSTART.ZH.md  QUICKSTART.md  README.ZH.md  README.md  pyproject.toml
docs/: registry-spec.ZH.md  registry-spec.md
scripts/: sync_opentask_skill.sh
skills/opentask/: SKILL.ZH.md  SKILL.md
skills/opentask/agents/: openai.yaml
skills/opentask/references/: operations.ZH.md  operations.md  orchestrator.ZH.md  orchestrator.md  registry.ZH.md  registry.md
skills/opentask/scripts/: registry_helper.py
src/opentask/: __init__.py  cli.py  config.py  device_auth.py  driver_protocol.py  models.py  openclaw_client.py  run_lock.py  service.py  session_keys.py  store.py  transcript.py  workflow.py
src/opentask/api/: __init__.py  main.py
tests/: __init__.py  test_api.py  test_openclaw_client.py  test_registry_helper.py  test_service.py  test_store.py  test_workflow.py
web/: README.ZH.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
web/src/components/: InspectorRail.tsx  RunOverviewHero.tsx  RunSidebar.tsx  StageBoard.tsx  TimelineStrip.tsx  WorkflowGraph.tsx
web/src/components/nodes/: RunNodeCard.tsx
workflows/: research-demo.task.ZH.md  research-demo.task.md
