[project]
name = "opentask"
version = "0.1.0"
description = "OpenTask workflow orchestration and visualization."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.41.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[project.scripts]
opentask-api = "opentask.api.main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentask"]

[tool.uv]
package = true
